<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_md">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_sm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_custom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ent_custom_name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_sm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_custom_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ent_custom_url_hint"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_custom_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ent_custom_key_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
